# agentic-rag.

./: .env  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: url.txt
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/node/: reactnode.py  temp
src/vectorstore/: vectorstore.py
